# Text-to-Speech-Offline-PWA

./: .env_template  .flaskenv  Dockerfile  Dockerfile.dev  README.md  deploy.sh  deploy_local_prod.py  docker-compose.build.prod.yml  docker-compose.dev.yml  docker-compose.prod.yml  gunicorn_config.py  pyproject.toml  requirements.dev.txt  requirements.prod.txt
.devcontainer/: .env_template  devcontainer.json  docker-compose.dev.yml
app/: __init__.py  routes.py
app/static/: manifest.json
app/static/css/: style.css
app/static/js/: script.js  service-worker.js
app/templates/: index.html
scripts/: poetry_make_requirements_file_linux.sh  poetry_make_requirements_file_windows.bat
